--- a/binomial.Rmd
+++ b/binomial.Rmd
@@ -192,32 +192,34 @@ First, we hold the number of draws constant at $n=5$ and vary the composition of
 ```{r binomial-pmf-1, echo=FALSE, fig.show = "hold", fig.align = "default", fig.asp=0.5}
 library(latex2exp)
 
-par(mfrow=c(1, 3))
 n <- 5
+
+par(mfrow=c(1, 3))
 N1 <- 4
 N0 <- 16
-plot(0:5, dbinom(0:n, n, 0.25), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.5),
+p <- N1 / (N1 + N0)
+plot(0:n, dbinom(0:n, n, p), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.45),
      main=TeX(paste("Binomial$(n=", n, ", N_1=", N1, ", N_0=", N0, ")$")))
-for(x in 0:5) {
-  lines(c(x, x), c(0, dbinom(x, n, 0.25)), lwd=2)
+for(x in 0:n) {
+  lines(c(x, x), c(0, dbinom(x, n, p)), lwd=2)
 } 
 
-n <- 5
 N1 <- 10
 N0 <- 10
-plot(0:5, dbinom(0:n, n, 0.5), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.5),
+p <- N1 / (N1 + N0)
+plot(0:n, dbinom(0:n, n, p), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.45),
      main=TeX(paste("Binomial$(n=", n, ", N_1=", N1, ", N_0=", N0, ")$")))
-for(x in 0:5) {
-  lines(c(x, x), c(0, dbinom(x, n, 0.5)), lwd=2)
+for(x in 0:n) {
+  lines(c(x, x), c(0, dbinom(x, n, p)), lwd=2)
 }
 
-n <- 5
 N1 <- 16
 N0 <- 4
-plot(0:5, dbinom(0:n, n, 0.75), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.5),
+p <- N1 / (N1 + N0)
+plot(0:n, dbinom(0:n, n, p), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.45),
      main=TeX(paste("Binomial$(n=", n, ", N_1=", N1, ", N_0=", N0, ")$")))
-for(x in 0:5) {
-  lines(c(x, x), c(0, dbinom(x, n, 0.75)), lwd=2)
+for(x in 0:n) {
+  lines(c(x, x), c(0, dbinom(x, n, p)), lwd=2)
 }
 ```
 
